--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
 @font-face {
-    font-family: 'CustomFont';
-    font-style: bold;
+    font-family: 'Script MT';
+    font-weight: bold;
+    font-style: normal;
     src: local(''),
-        url('assets/fonts/SCRIPTBL.ttf')format('ttf');
+        url('./assets/fonts/subset-ScriptMTBold.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('./assets/fonts/subset-ScriptMTBold.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 body{
